Expand OIDC Error Support
